Fix: Overflowing usm on small screen. Refactorings.

--- a/services/web/public/assets/styles.css
+++ b/services/web/public/assets/styles.css
@@ -12,9 +12,9 @@ body {
     display: block;
     padding: 0.4rem;
     position: absolute;
-    left: 50%;
+    /* left: 50%;
     margin-right: -50%;
-    transform: translate(-50%, 0%);
+    transform: translate(-50%, 0%); */
 }
 
 
